fixed z-index problem of border on some browsers in 641 to 768

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -240,6 +240,7 @@ h2 {
     .crass-top {
         word-spacing: .5rem;
         padding-left: 17px;
+        z-index: 5;
     }
     
     .crass-right {
